public/stylesheets/blog.css
/* ... */
.suffix_1{padding-right:8.333%}.container_12
.suffix_2{padding-right:16.667%}.container_12
.suffix_3{padding-right:25.0%}.container_12
.suffix_4{padding-right:33.333%}.container_12
.suffix_5{padding-right:41.667%}.container_12
.suffix_6{padding-right:50.0%}.container_12
.suffix_7{padding-right:58.333%}.container_12
.suffix_8{padding-right:66.667%}.container_12
.suffix_9{padding-right:75.0%}.container_12
.suffix_10{padding-right:83.333%}.container_12
.suffix_11{padding-right:91.667%}.container_12
.push_1{left:8.333%}.container_12
.push_2{left:16.667%}.container_12
.push_3{left:25.0%}.container_12
.push_4{left:33.333%}.container_12
.push_5{left:41.667%}.container_12
.push_6{left:50.0%}.container_12
.push_7{left:58.333%}.container_12
.push_8{left:66.667%}.container_12
.push_9{left:75.0%}.container_12
.push_10{left:83.333%}.container_12
.push_11{left:91.667%}.container_12
.pull_1{left:-8.333%}.container_12
.pull_2{left:-16.667%}.container_12
.pull_3{left:-25.0%}.container_12
.pull_4{left:-33.333%}.container_12
.pull_5{left:-41.667%}.container_12
.pull_6{left:-50.0%}.container_12
.pull_7{left:-58.333%}.container_12
.pull_8{left:-66.667%}.container_12
.pull_9{left:-75.0%}.container_12
.pull_10{left:-83.333%}.container_12
.pull_11{left:-91.667%}.clear{clear:both;display:block;overflow:hidden;visibility:hidden;width:0;height:0}.clearfix:after{clear:both;content:' ';display:block;font-size:0;line-height:0;visibility:hidden;width:0;height:0}* html .clearfix,*:first-child+html
.clearfix{zoom:1}::-moz-selection{background:#db1010;color:#fff;text-shadow:none}::selection{background:#db1010;color:#fff;text-shadow:none}

html {
  background: #fff url(http://www.dfimg.com/images/bg-cover.png) repeat 0 0;
}

body {  
  font-family: 'Helvetica Neue', sans-serif;
  font-size: 16px;
}

code, pre {
  font-family: 'Monaco', fixed, monospace;  
  font-size: 13px;
}

div#blog-container {
  padding: 40px;
  margin:2% auto;
  max-width: 1080px;
  width: 88%;
  margin-left: auto;
  margin-right: auto;

}

#header {
  height:6.15em;
  border-bottom:1px solid rgba(0,0,0,0.2);
  margin-bottom: 2.5em;
}

#header nav {
  margin-top: 32px;
}

#header nav ul {
  display:block;
}

#header nav ul li {
  float:left;
  border-left: 1px dotted #ccc;
  display: block;
  height: 14px;
  overflow: hidden;
}

#header nav ul li:first-child {
  border: none;
}

#header nav ul li:first-child a {
  padding: 0 50px 0 0;
}

#header nav li a {
  font-size:12px;
  color:#df0d32;
  text-decoration:none;
  text-transform:uppercase;
  padding:0 54px;
  -webkit-transition:150ms all linear;
  -moz-transition:150ms all linear;
  -o-transition:150ms all linear;
  transition:150ms all linear; 
  margin: 0 0;
  display:block;
}

#header nav li a:after {
	content:attr(title);
	display:block;
}

#header nav li a:hover {
  margin-top:-15px;
  color:#000;
}

h1 {
  font-size: 42px;
  line-height:66px;
  text-shadow:1px 1px 1px #ccc;
  letter-spacing: -1px;
  font-weight: 500;
}

h1 small {
  font-size:16px;
  color:#333;
  letter-spacing: 0;
  font-weight: 300;
  text-transform: lowercase;
  padding: 0 0 0 20px;
}

h2 {
  font-size: 28px;
  font-weight: 300;
  letter-spacing: -1px;
  line-height: 36px;
}

h3 {
  font-size: 26px;
  font-weight: 300;
  margin: 26px 0;
}

h1, h2, h3, h4, h5, h6 {
  font-family: "Georgia", serif;
}

a {
  text-decoration: none;
  color: #df0d32;
  color: rgba(223, 13, 50, .8);
  -webkit-transition: color .3s ease-in-out;  
  -moz-transition: color .3s ease-in-out;
  transition: color .3s ease-in-out;  
}

a:hover {
	color: #df0d32;
	color: rgba(223, 13, 50, 1);
  text-shadow: -1px -1px 0 #fff;
}

h2 a {
  color: #000;
}

h2 a:hover {
  color: #4e7178;
}

#header h1 {
  text-transform: lowercase;
}

#posts_index p {
  font-size: 16px;
  line-height: 26px;
  margin: 16px 0 0;
}

#posts_index section {
  margin: 0 0 60px 22px;
}

#posts_index article section a {
  color: #000;
}

#posts_index a:hover {
  color: #df0d32;
  cursor: pointer!important;
}

#posts_index time, .author time{
  font-family: 'Monaco', fixed, monospace;  
  font-size: 12px;
  text-transform: uppercase;
  color: #666;
}

#posts_index aside {
  margin: 6px 0 0;
}

#posts_index aside .comments {
  font-size: 14px;
  margin: 16px 0 0;
}

#posts_index aside .comments a{
  color: #000;
}

span.label{
  font-family: "Helvetica Neue", "Arial", sans-serif;
  font-size: 12px;
  text-transform: lowercase;
  margin: 0 0 0 20px;
  background-color: #202b30;
  color: #f1f7e2;
  font-weight; 300;
  text-shadow: none;
  -webkit-border-radius: 3px;
  -moz-border-radius: 3px;
  border-radius: 3px;
  position: relative;
  padding: 6px;
  top: -7px;
}

span.label.tableless{
  background-color: #eb181e;
}

#post time {
  border-bottom: 1px dotted #CCCCCC;
  color: #666666;
  display: block;
  font-size: 14px;
  font-style: oblique;
  margin: 0 0 30px;
  padding: 0 0 12px;
}

#post p {
  line-height: 26px
}

#post p, #post ul, #post ol, #post table, #post pre, #post code {
  margin: 0 0 26px 0;
}

#post pre ol {
  margin: 0 0;
}

#post h2, h3, h4 {
  margin: 22px 0;
}

#post h4 {
  font-size: 22px;
}

#post h1 {
  font-size: 48px;
  line-height: 52px;
  margin: 0 0 40px 0;
}

time em, aside .comments em {
  font-weight: 800;
  color: #df0d32;
  font-size: 16px;
  display: inline-block;
  margin: 0 12px 0 0;
}

time em {
  font-size: 12px;
}

.comments a:hover {
  color: #df0d32 !important;
}

#post ul {
  list-style: inside square;
  margin-bottom: .8em;
}

#post ul li {
  line-height: 26px;
}

table.propriedades {
width:90%;
border:none;
margin:0.5em 0 1.9em 0;
}

table.propriedades thead tr th
{
  text-align:center;
  padding:0.5em;
  background-color:#f2f2f2;
  border-bottom:1px dotted #ccc;
  font-weight: normal;
}

table.propriedades tr td {
border-bottom:1px solid #C7E8F1;
margin:0 0;
padding:0.5em;
}

table.propriedades.canvas tr td
{
  padding:0.5em;
  text-align:center;
}
/* ... */

